--- a/debian/rules
+++ b/debian/rules
@@ -30,6 +30,7 @@ binary-indep: build install
 	dh_testdir
 	dh_testroot
 	dh_installdocs
+	dh_installexamples
 	dh_installman
 	dh_installchangelogs ChangeLog
 	dh_link
