--- a/debian/rules
+++ b/debian/rules
@@ -1,47 +1,11 @@
 #!/usr/bin/make -f
-# Sample debian/rules that uses debhelper.
-# GNU copyright 1997 to 1999 by Joey Hess.
+# -*- makefile -*-
 
-# Uncomment this to turn on verbose mode.
-#export DH_VERBOSE=1
+%:
+	dh $@
 
-build: build-stamp
-build-stamp:
-	dh_testdir
-	touch $@
-
-clean:
-	dh_testdir
-	dh_testroot
-	dh_clean install.pl build-stamp
-
-install: build
-	dh_testdir
-	dh_testroot
-	dh_prep
-	install -D cowsay debian/cowsay/usr/games/cowsay
-	install -d debian/cowsay/usr/share/cowsay
-	cp -a cows debian/cowsay/usr/share/cowsay
-	rm debian/cowsay/usr/share/cowsay/cows/mech-and-cow
-
-binary-arch: build install
-
-binary-indep: build install
-	dh_testdir
-	dh_testroot
-	dh_installdocs
-	dh_installexamples
-	dh_installman
-	dh_installchangelogs ChangeLog
-	dh_link
-	dh_strip
-	dh_compress
-	dh_fixperms
-	dh_installdeb
-	dh_perl
-	dh_gencontrol
-	dh_md5sums
-	dh_builddeb
-
-binary: binary-indep binary-arch
-.PHONY: build clean binary-indep binary-arch binary install
+override_dh_auto_install:
+	install -D $(CURDIR)/cowsay $(CURDIR)/debian/cowsay/usr/games/cowsay
+	install -d $(CURDIR)/debian/cowsay/usr/share/cowsay
+	cp -a $(CURDIR)/cows $(CURDIR)/debian/cowsay/usr/share/cowsay
+	rm $(CURDIR)/debian/cowsay/usr/share/cowsay/cows/mech-and-cow
