--- a/debian/control
+++ b/debian/control
@@ -12,7 +12,7 @@ Package: cowsay
 Architecture: all
 Depends: ${perl:Depends}, ${misc:Depends}
 Suggests: filters
-Description: A configurable talking cow
+Description: configurable talking cow
  Cowsay (or cowthink) will turn text into happy ASCII cows, with
  speech (or thought) balloons. If you don't like cows, ASCII art is
  available to replace it with some other creatures (Tux, the BSD
