--- a/debian/control
+++ b/debian/control
@@ -5,8 +5,8 @@ Maintainer: Francois Marier <francois@debian.org>
 Build-Depends: debhelper (>= 9)
 Homepage: http://www.nog.net/~tony/warez/cowsay.shtml
 Standards-Version: 3.9.5
-Vcs-Git: git://git.debian.org/git/collab-maint/cowsay.git
-Vcs-Browser: http://git.debian.org/?p=collab-maint/cowsay.git;a=summary
+Vcs-git: git://anonscm.debian.org/collab-maint/cowsay.git
+Vcs-Browser: http://anonscm.debian.org/gitweb/?p=collab-maint/cowsay.git;a=summary
 
 Package: cowsay
 Architecture: all
