--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,8 @@
 Source: cowsay
 Section: games
 Priority: optional
-Maintainer: Francois Marier <francois@debian.org>
+Maintainer: Tony Maillefaud <maltouzes@gmail.com>
+Uploaders: Francois Marier <francois@debian.org>
 Build-Depends: debhelper (>= 9)
 Homepage: https://web.archive.org/web/20120527202447/http://www.nog.net/~tony/warez/cowsay.shtml
 Standards-Version: 3.9.6
