--- a/debian/rules
+++ b/debian/rules
@@ -8,6 +8,6 @@ override_dh_auto_install:
 	install -D $(CURDIR)/cowsay $(CURDIR)/debian/cowsay/usr/games/cowsay
 	install -d $(CURDIR)/debian/cowsay/usr/share/cowsay
 	cp -a $(CURDIR)/cows $(CURDIR)/debian/cowsay/usr/share/cowsay
-	install -d $(CURDIR)/debian/cowsay-off/usr/games/cowsay
-	mv $(CURDIR)/debian/cowsay/usr/share/cowsay/head-in $(CURDIR)/debian/cowsay/usr/share/cowsay/mutilated $(CURDIR)/debian/cowsay-off/usr/games/cowsay
+	install -d $(CURDIR)/debian/cowsay-off/usr/share/cowsay/cows
+	mv $(CURDIR)/debian/cowsay/usr/share/cowsay/cows/head-in.cow $(CURDIR)/debian/cowsay/usr/share/cowsay/cows/mutilated.cow $(CURDIR)/debian/cowsay/usr/share/cowsay/cows/sodomized-sheep.cow $(CURDIR)/debian/cowsay-off/usr/share/cowsay/cows
 	rm $(CURDIR)/debian/cowsay/usr/share/cowsay/cows/mech-and-cow
