debian/control change Conflicts field to Replaces

--- a/debian/control
+++ b/debian/control
@@ -24,7 +24,7 @@ Description: configurable talking cow
 Package: cowsay-off
 Architecture: all
 Depends: ${misc:Depends}, cowsay
-Conflicts: cowsay (<< 3.03+dfsg1-13)
+Replaces: cowsay (<< 3.03+dfsg1-13)
 Description: configurable talking cow (offensive cows)
  Cowsay (or cowthink) will turn text into happy ASCII cows, with
  speech (or thought) balloons. If you don't like cows, ASCII art is
