Change changelog date

--- a/debian/control
+++ b/debian/control
@@ -34,4 +34,4 @@ Description: configurable talking cow (offensive cows)
  an elephant in a snake).
  .
  This package contains cows witch some may consider to be offensive.
- Please do not install this package if you or your users are easily offended
+ Please do not install this package if you or your users are easily offended.
