--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,7 @@ Build-Depends: debhelper (>= 9)
 Homepage: https://web.archive.org/web/20120527202447/http://www.nog.net/~tony/warez/cowsay.shtml
 Standards-Version: 3.9.6
 Vcs-git: git://anonscm.debian.org/collab-maint/cowsay.git
-Vcs-Browser: http://anonscm.debian.org/gitweb/?p=collab-maint/cowsay.git;a=summary
+Vcs-Browser: https://anonscm.debian.org/cgit/collab-maint/cowsay.git/
 
 Package: cowsay
 Architecture: all
