--- a/debian/control
+++ b/debian/control
@@ -5,8 +5,8 @@ Maintainer: Tony Maillefaud <maltouzes@gmail.com>
 Uploaders: Francois Marier <francois@debian.org>
 Build-Depends: debhelper (>= 9)
 Homepage: https://web.archive.org/web/20120527202447/http://www.nog.net/~tony/warez/cowsay.shtml
-Standards-Version: 3.9.6
-Vcs-git: git://anonscm.debian.org/collab-maint/cowsay.git
+Standards-Version: 3.9.7
+Vcs-git: https://anonscm.debian.org/git/collab-maint/cowsay.git
 Vcs-Browser: https://anonscm.debian.org/cgit/collab-maint/cowsay.git/
 
 Package: cowsay
