--- a/debian/control
+++ b/debian/control
@@ -5,7 +5,7 @@ Maintainer: Tony Maillefaud <maltouzes@gmail.com>
 Uploaders: Francois Marier <francois@debian.org>
 Build-Depends: debhelper (>= 9)
 Homepage: https://web.archive.org/web/20120527202447/http://www.nog.net/~tony/warez/cowsay.shtml
-Standards-Version: 3.9.7
+Standards-Version: 3.9.8
 Vcs-git: https://anonscm.debian.org/git/collab-maint/cowsay.git
 Vcs-Browser: https://anonscm.debian.org/cgit/collab-maint/cowsay.git/
 
@@ -33,5 +33,5 @@ Description: configurable talking cow (offensive cows)
  daemon, dragons, and a plethora of animals, from a turkey to
  an elephant in a snake).
  .
- This package contains cows witch some may consider to be offensive.
+ This package contains cows which some may consider to be offensive.
  Please do not install this package if you or your users are easily offended.
