--- a/debian/rules
+++ b/debian/rules
@@ -9,5 +9,5 @@ override_dh_auto_install:
 	install -d $(CURDIR)/debian/cowsay/usr/share/cowsay
 	cp -a $(CURDIR)/cows $(CURDIR)/debian/cowsay/usr/share/cowsay
 	install -d $(CURDIR)/debian/cowsay-off/usr/share/cowsay/cows
-	mv $(CURDIR)/debian/cowsay/usr/share/cowsay/cows/head-in.cow $(CURDIR)/debian/cowsay/usr/share/cowsay/cows/mutilated.cow $(CURDIR)/debian/cowsay/usr/share/cowsay/cows/sodomized-sheep.cow $(CURDIR)/debian/cowsay-off/usr/share/cowsay/cows
+	mv $(CURDIR)/debian/cowsay/usr/share/cowsay/cows/head-in.cow $(CURDIR)/debian/cowsay/usr/share/cowsay/cows/bong.cow $(CURDIR)/debian/cowsay/usr/share/cowsay/cows/beavis.zen.cow $(CURDIR)/debian/cowsay/usr/share/cowsay/cows/mutilated.cow $(CURDIR)/debian/cowsay/usr/share/cowsay/cows/sodomized-sheep.cow $(CURDIR)/debian/cowsay-off/usr/share/cowsay/cows
 	rm $(CURDIR)/debian/cowsay/usr/share/cowsay/cows/mech-and-cow
