--- a/debian/control
+++ b/debian/control
@@ -12,8 +12,7 @@ Vcs-Browser: https://anonscm.debian.org/cgit/collab-maint/cowsay.git/
 Package: cowsay
 Architecture: all
 Depends: libtext-charwidth-perl, ${misc:Depends}, ${perl:Depends}
-Recommends: cowsay-off
-Suggests: filters
+Suggests: filters, cowsay-off
 Description: configurable talking cow
  Cowsay (or cowthink) will turn text into happy ASCII cows, with
  speech (or thought) balloons. If you don't like cows, ASCII art is
