--- a/debian/rules
+++ b/debian/rules
@@ -11,3 +11,4 @@ override_dh_auto_install:
 	install -d $(CURDIR)/debian/cowsay-off/usr/share/cowsay/cows
 	mv $(CURDIR)/debian/cowsay/usr/share/cowsay/cows/bong.cow $(CURDIR)/debian/cowsay/usr/share/cowsay/cows/beavis.zen.cow $(CURDIR)/debian/cowsay/usr/share/cowsay/cows/mutilated.cow $(CURDIR)/debian/cowsay-off/usr/share/cowsay/cows
 	rm $(CURDIR)/debian/cowsay/usr/share/cowsay/cows/mech-and-cow
+	rm $(CURDIR)/debian/cowsay/usr/share/cowsay/cows/head-in.cow
