Move VCS fields to salsa

--- a/debian/control
+++ b/debian/control
@@ -6,8 +6,8 @@ Uploaders: Francois Marier <francois@debian.org>
 Build-Depends: debhelper (>= 9)
 Homepage: https://web.archive.org/web/20120527202447/http://www.nog.net/~tony/warez/cowsay.shtml
 Standards-Version: 4.1.1
-Vcs-git: https://anonscm.debian.org/git/collab-maint/cowsay.git
-Vcs-Browser: https://anonscm.debian.org/cgit/collab-maint/cowsay.git/
+Vcs-git: https://salsa.debian.org/debian/cowsay.git
+Vcs-Browser: https://salsa.debian.org/debian/cowsay
 
 Package: cowsay
 Architecture: all
