--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: cowsay
 Section: games
 Priority: optional
-Maintainer: Debian QA Group <packages@qa.debian.org>
+Maintainer: James McDonald <james@jamesmcdonald.com>
 Build-Depends: debhelper (>= 11)
 Homepage: https://web.archive.org/web/20120527202447/http://www.nog.net/~tony/warez/cowsay.shtml
 Standards-Version: 4.1.1
